# powergrid-rust

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.lobby  PLAN.md  README.md  TODO.md  bots.sh  docker-compose.yml  run.sh
.github/workflows/: release.yml
assets/bots/: default.toml
assets/maps/: germany.toml
crates/map-tool/: Cargo.toml
crates/map-tool/src/: main.rs
crates/powergrid-bot/: Cargo.toml
crates/powergrid-bot-strategy/: Cargo.toml
crates/powergrid-bot-strategy/src/: bot.rs  features.rs  lib.rs  profile.rs  strategy.rs
crates/powergrid-bot/src/: lib.rs  main.rs  runtime.rs  strategy.rs
crates/powergrid-client/: Cargo.toml
crates/powergrid-client/src/: app.rs  auth.rs  card_painter.rs  connection.rs  effects.rs  local.rs  main.rs  map_panel.rs  peer_hints.rs  prefs.rs  screens.rs  state.rs  theme.rs  ui.rs  ws.rs
crates/powergrid-client/src/ui/: action_panel.rs  connect.rs  event_log.rs  helpers.rs  left_panel.rs  lobby.rs  local_setup.rs  login.rs  main_menu.rs  mod.rs  phase_tracker.rs  player_summary.rs  register.rs  right_panel.rs  room_browser.rs  top_panel.rs
crates/powergrid-client/src/ui/phases/: auction.rs  build_cities.rs  bureaucracy.rs  buy_resources.rs  discard_plant.rs  discard_resource.rs  game_over.rs  mod.rs  power_cities_fuel.rs
crates/powergrid-core/: Cargo.toml
crates/powergrid-core/src/: actions.rs  lib.rs  map.rs  rules.rs  state.rs  types.rs
crates/powergrid-core/src/actions/: game.rs  hints.rs  mod.rs  protocol.rs
crates/powergrid-lobby/: Cargo.toml
crates/powergrid-lobby/migrations/: 0001_init.sql
crates/powergrid-lobby/src/: auth.rs  db.rs  driver.rs  hint_handler.rs  lobby_handler.rs  main.rs  room_handler.rs  rooms.rs  ws.rs
crates/powergrid-maptool/: Cargo.toml
crates/powergrid-maptool/src/: main.rs
crates/powergrid-py/: Cargo.toml
crates/powergrid-py/src/: lib.rs
crates/powergrid-reimagined/: Cargo.toml
crates/powergrid-reimagined/src/: assets.rs  main.rs  map_panel.rs  state.rs  theme.rs  ui.rs  ws.rs
crates/powergrid-server/: Cargo.toml
crates/powergrid-server/maps/: germany.toml
crates/powergrid-server/src/: lib.rs  main.rs  ws.rs
crates/powergrid-session/: Cargo.toml
crates/powergrid-session/src/: lib.rs
docs/: bots.md  rl-environment.md
maps/: germany.toml
python/: Makefile  pyproject.toml
python/runs/vs_bots/tb/MaskablePPO_1/: events.out.tfevents.1778470069.fedora.2517621.0
python/runs/vs_bots/tb/MaskablePPO_2/: events.out.tfevents.1778470152.fedora.2518403.0
python/scripts/: play_game.py  train_selfplay.py  train_vs_bots.py
python/src/powergrid_env/: __init__.py  constants.py  encoding.py  env.py  self_play.py  single_agent.py
python/src/powergrid_env/policies/: __init__.py  random_policy.py  rust_bot_policy.py
python/tests/: test_encoding.py  test_env.py  test_native_bridge.py  test_random_play.py
