[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powergrid-env"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pettingzoo==1.26.1",
    "gymnasium>=1.0.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
# supersuit requires Python dev headers to build tinyscaler — install manually if needed.
train = ["stable-baselines3>=2.4.0", "sb3-contrib>=2.4.0", "torch>=2.4"]
dev   = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/powergrid_env"]

[tool.ruff]
line-length = 100
