[package]
name = "powergrid-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "powergrid_bot"
path = "src/lib.rs"

[[bin]]
name = "powergrid-bot"
path = "src/main.rs"

[dependencies]
powergrid-core = { path = "../powergrid-core" }
powergrid-bot-strategy = { path = "../powergrid-bot-strategy" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
