[package]
name = "powergrid-client"
version = "0.1.0"
edition = "2021"

[dependencies]
powergrid-core = { path = "../powergrid-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

bevy = { version = "0.18", features = ["default"] }
bevy_egui = "0.39"
egui = "0.33"
crossbeam-channel = "0.5"
tokio-tungstenite = "0.24"
futures-util = "0.3"
confy = "0.6"

# Speed up incremental dev builds significantly
[features]
dev = ["bevy/dynamic_linking"]
