[package]
name = "powergrid-maptool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "maptool"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
