[package]
name = "powergrid-reimagined"
version = "0.1.0"
edition = "2021"

[dependencies]
powergrid-core = { path = "../powergrid-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

bevy = { version = "0.15", features = ["default"] }
bevy_egui = "0.31"
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
crossbeam-channel = "0.5"
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Speed up incremental dev builds significantly
[features]
dev = ["bevy/dynamic_linking"]
