[package]
name = "powergrid-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "powergrid_server"
path = "src/lib.rs"

[[bin]]
name = "powergrid-server"
path = "src/main.rs"

[dependencies]
powergrid-core = { path = "../powergrid-core" }
powergrid-session = { path = "../powergrid-session" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace"] }
futures = "0.3"
uuid = { workspace = true }
