[package]
name = "powergrid-session"
version = "0.1.0"
edition = "2021"

[dependencies]
powergrid-core = { path = "../powergrid-core" }
powergrid-bot-strategy = { path = "../powergrid-bot-strategy" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crossbeam-channel = "0.5"
